# rust-github-jenkins

./: .gitignore  README.md
rust-scraper/: .env  Cargo.toml
rust-scraper/migrations/2022-07-22-094341_store_pulls/: down.sql  up.sql
rust-scraper/migrations/2022-07-22-100434_read_configuration/: down.sql  up.sql
rust-scraper/migrations/2022-07-29-103232_store_builds/: down.sql  up.sql
rust-scraper/src/: lib.rs  main.rs  models.rs  protocol.rs  scraper.rs  writer.rs
rust-scraper/src/protocol/: github.rs  jenkins.rs
rust-web/: .env  Cargo.toml
rust-web/src/: lib.rs  main.rs  models.rs  schema.rs
