[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.11", features=["json"] } # reqwest with JSON parsing support
#futures = "0.3" # for async / await blocks
#tokio = { version = "1.12.0", features = ["full"] } # for async runtime
serde = { version = "1.0", features = ["derive"] } # for deserializing
diesel = { version = "1.4.4", features = ["postgres"] } # for database querying
dotenv = "0.15.0" # for maintaining .env files
log = "0.4" # API for logging data
env_logger = "0.9.0" # logger imlementation
rocket = "0.4.11" # webserver
rocket_contrib = { version = "0.4.11", features = ["json"] } # webserver json serialization
